fixed scrollbars showing

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,3 +1,10 @@
+
+*
+  margin: 0 !important
+
+
+
 .left-nav
   background: #282A36
   color: lightgray
+
